# WAVEGO_3D_MODEL

assemblyURDF_sim_v3/: CMakeLists.txt  package.xml
assemblyURDF_sim_v3/config/: joint_names_assemblyURDF_sim_v3.yaml
assemblyURDF_sim_v3/launch/: display.launch.py  gazebo.launch.py
assemblyURDF_sim_v3/urdf/: assemblyURDF_sim_v3.urdf
