<?xml version="1.0"?>

<package format="3">
  <name>assemblyURDF_sim_v3</name>
  <version>1.0.0</version>

  <description>
    URDF description package for the WAVEGO quadruped robot.
    Contains meshes, URDF files, configuration files and launch files.
  </description>

  <maintainer email="abubakarsiddiq.2005@outlook.com">
    Abubakar siddiq
  </maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- Xacro support -->
  <exec_depend>xacro</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Gazebo Harmonic integration -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
